--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Modak&family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Modak&family=Roboto:wght@400;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -36,25 +36,28 @@ body {
   background: linear-gradient(135deg, #2e2b5f, #4a306d, #803977);
   background-attachment: fixed;
   background-size: cover;
-  height: 50vh;
+  height: 40vh;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
   color: #ffffff;
-  padding: 50px;
-  margin-bottom: 50px;
+  padding: 40px;
+  margin-bottom: 40px;
   text-align: center;
-  
-  transition: height 0.5s ease-in-out, padding 0.5s ease-in-out;
+
+  transition:
+    height 0.5s ease-in-out,
+    padding 0.5s ease-in-out;
 }
 
 .header--slim {
   height: 100px;
   padding: 20px;
+  margin-bottom: 20px;
 }
 
 .header--slim .title {
-  font-size: 3rem;
+  font-size: 1.8rem;
   line-height: 3rem;
 }
